<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:clickable="true"
        android:contentDescription="@string/content_description"
        android:src="@drawable/profile_image" />
    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_navheader"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/header_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_navheader"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textSize="24sp" />

</LinearLayout>